fixed overflow bug

--- a/curve-tests/curve/website-demo/style.css
+++ b/curve-tests/curve/website-demo/style.css
@@ -43,6 +43,7 @@ canvas {
 .main {
   margin-left: 160px;
   padding: 0px 10px;
+  overflow-x: hidden;
 }
 
 @media screen and (max-height: 450px) {
